Adding blockhost support + volumes + support for kafka view type
