# codegen/5.3.0/model_volume.go
@@ -19,6 +19,8 @@ type Volume struct {
 	Size int64 `json:"size,omitempty"`
 	// The View ID to relate this volume with , must be a View with protocol defined as BLOCK
 	ViewId int64 `json:"view_id,omitempty"`
+	// List of blockhosts associated with this volume
+	BlockHostIds []int64 `json:"block_host_ids,omitempty"`
 	// List of tags at the key:value format
 	VolumeTags []string `json:"volume_tags,omitempty"`
 }
